wrap original error

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jsdevtools/ono",
-  "version": "7.1.2",
+  "name": "@drdgvhbh/ono",
+  "version": "7.1.13",
   "description": "Throw better errors.",
   "keywords": [
     "throw",
